--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,19 @@
 @font-face {
-  font-family: Montserrat;
-  src: url(./assets/fonts/Montserrat-VariableFont_wght.ttf);
+    font-family: Montserrat;
+    src: url(./assets/fonts/Montserrat-VariableFont_wght.ttf);
 }
 
 :root {
-  --background: #d7d7d7;
-  --sky_blue: #e1f5fe;
-  --ocean_blue: #01579b;
-  --green: #34a853;
+    --background: #d7d7d7;
+    --sky_blue: #e1f5fe;
+    --ocean_blue: #01579b;
+    --green: #34a853;
+    --grey: #9a9a9a;
 }
 
-*{
-  font-family: Montserrat;
-  background-color: var(--background);
+* {
+    font-family: Montserrat;
+    border: 0;
+    margin: 0;
+    padding: 0;
 }
