--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -13,11 +13,28 @@
     align-items: center;
     background-color: var(--sky_blue);
     width: 30%;
-    height: 65%;
+    height: 70%;
+    min-height: 600px;
+    min-width: 360px;
     -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.69);
     -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.69);
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.69);
     border-radius: 10px;
+}
+
+@media (max-width: 575px) {
+    .login {
+        width: 95vw;
+    }
+}
+
+@media (orientation: landscape) and (max-height: 620px) {
+    .contenedor {
+        height: 100%;
+    }
+    .login {
+        margin: 2rem 0;
+    }
 }
 
 .login_logo {
@@ -32,32 +49,133 @@
 }
 
 .login_form {
+    width: 100%;
     margin-top: 2rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 1rem;
+    gap: 1.6rem;
 }
 
-.login_form_input {
-    height: 2.1rem;
+.login_form_inputContainer {
+    height: 2.5rem;
+    width: 60%;
+    min-width: 250px;
     background-color: white;
     display: flex;
     color: var(--grey);
+    border-radius: 10px;
+    -webkit-box-shadow: 1px 2px 6px 0px rgba(105, 105, 105, 0.79);
+    -moz-box-shadow: 1px 2px 6px 0px rgba(105, 105, 105, 0.79);
+    box-shadow: 1px 2px 6px 0px rgba(105, 105, 105, 0.79);
 }
 
 .login_form_logo {
-    width: 15%;
+    width: 20px;
     border-right: 1px solid var(--grey);
     padding: 0.5rem;
 }
 
-.login_form_btn--login {
-    width: 70%;
-    color: white;
-    background-color: var(--ocean_blue);
+.login_form_input {
+    padding-left: 0.5rem;
+    border-radius: 0 10px 10px 0;
+    height: 100%;
+    width: 100%;
+}
+
+.login_form_input:focus {
+    outline: none;
+}
+
+.login_form_btn {
+    width: 30%;
+    min-width: 150px;
     border-radius: 10px;
-    height: 2.1rem;
+    height: 2.8rem;
     font-size: 1rem;
     font-weight: 400;
+}
+
+.login_form_btn--login {
+    color: white;
+    background-color: var(--ocean_blue);
+}
+
+.login_form_btn--login:hover {
+    cursor: pointer;
+    background-color: #00477e;
+}
+
+.error {
+    color: var(--red);
+    width: 70%;
+    text-align: center;
+}
+
+.login_mensajeRegistro {
+    margin-top: 1.2rem;
+    margin-bottom: 2rem;
+    color: black;
+    width: 70%;
+    text-align: center;
+}
+
+.subrayado {
+    color: black;
+    text-decoration: underline;
+    padding-left: 0.3rem;
+}
+
+.login_buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 0.9rem;
+    width: 100%;
+}
+
+.login_buttons_logo {
+    width: 35px;
+    margin-left: 1rem;
+    margin-right: 1rem;
+}
+
+.login_form_btn--google {
+    text-decoration: none;
+    color: #000;
+    cursor: pointer;
+    display: flex;
+    height: 3rem;
+    align-items: center;
+    background-color: white;
+    width: 50%;
+    min-width: 280px;
+    font-size: 1rem;
+    -webkit-box-shadow: 1px 2px 6px 0px rgba(105, 105, 105, 0.79);
+    -moz-box-shadow: 1px 2px 6px 0px rgba(105, 105, 105, 0.79);
+    box-shadow: 1px 2px 6px 0px rgba(105, 105, 105, 0.79);
+}
+
+.login_form_btn--google:hover {
+    background-color: #f7f7f7;
+}
+
+.login_form_btn--facebook {
+    text-decoration: none;
+    cursor: pointer;
+    display: flex;
+    height: 3rem;
+    align-items: center;
+    background-color: #1877f2;
+    color: #fff;
+    width: 50%;
+    min-width: 280px;
+    font-size: 1rem;
+    -webkit-box-shadow: 1px 2px 6px 0px rgba(105, 105, 105, 0.79);
+    -moz-box-shadow: 1px 2px 6px 0px rgba(105, 105, 105, 0.79);
+    box-shadow: 1px 2px 6px 0px rgba(105, 105, 105, 0.79);
+}
+
+.login_form_btn--facebook:hover {
+    background-color: #166ddf;
 }
