checkLogin() almost finished

--- a/src/index.css
+++ b/src/index.css
@@ -8,7 +8,7 @@
     --sky_blue: #e1f5fe;
     --ocean_blue: #01579b;
     --green: #34a853;
-    --grey: #9a9a9a;
+    --light_grey: #9a9a9a;
     --red: #e11212;
 }
 
