--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -13,9 +13,10 @@
     align-items: center;
     background-color: var(--sky_blue);
     width: 30%;
-    height: 70%;
-    min-height: 600px;
+    /*     height: 70%;
+    min-height: 600px; */
     min-width: 360px;
+    padding-bottom: 50px;
     -webkit-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.69);
     -moz-box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.69);
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.69);
@@ -23,7 +24,7 @@
 }
 
 .login--error {
-    min-height: 650px;
+    min-height: 400px;
 }
 
 @media (max-width: 575px) {
