implementar laoder y comprobar jwt en home

--- a/src/pages/SignUp/SignUp.css
+++ b/src/pages/SignUp/SignUp.css
@@ -1,7 +1,13 @@
 .login--signup {
-    padding-bottom: 10px;
+  padding-bottom: 10px;
 }
 
 .signup--error {
-    min-height: 400px;
+  min-height: 400px;
+}
+
+.success {
+  color: var(--green);
+  width: 70%;
+  text-align: center;
 }
