--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -2,20 +2,42 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  align-items: center;
-  flex-wrap: wrap;
-}
-
-.home-container_events {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-around;
-  align-items: center;
+  width: 100vw;
+  height: 79.5vh;
+  /* flex-wrap: wrap; */
 }
 
 .home-container_section {
+  margin-top: 30px;
+  width: 30%;
+  height: 80%;
+  display: flex;
+  flex-direction: column;
+}
+
+.home-container_events {
+  height: 100%;
+  background-color: var(--sky_blue);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+}
+
+/* .home-container_events_section {
   display: flex;
   flex-direction: column;
   gap: 20px;
   align-items: center;
+  overflow-y: scroll;
+} */
+
+.home-container_info {
+  margin: 20px 0;
+  width: 95%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 20px;
+  overflow-y: scroll;
 }
