--- a/src/globalComponents/Header/Header.css
+++ b/src/globalComponents/Header/Header.css
@@ -6,6 +6,8 @@
   justify-content: space-between;
   align-items: center;
   background-color: var(--sky_blue);
+  padding: 0 2rem;
+  box-sizing: border-box;
 }
 
 .header_userInfo {
