--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -4,12 +4,19 @@
   justify-content: space-evenly;
   width: 100vw;
   height: 79.5vh;
-  /* flex-wrap: wrap; */
+  flex-wrap: wrap;
+}
+
+.home-container_title {
+  font-size: 1.2rem;
+  font-weight: 400;
+  margin: 0 0 0.5rem 0.8rem;
 }
 
 .home-container_section {
   margin-top: 30px;
-  width: 30%;
+  width: 25%;
+  min-width: 350px;
   height: 80%;
   display: flex;
   flex-direction: column;
@@ -22,6 +29,8 @@
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
+  border-radius: 1rem;
+  padding-bottom: 1rem;
 }
 
 /* .home-container_events_section {
@@ -32,12 +41,27 @@
   overflow-y: scroll;
 } */
 
+.home-container_saldo {
+}
+
 .home-container_info {
   margin: 20px 0;
-  width: 95%;
+  width: 90%;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 20px;
   overflow-y: scroll;
+}
+
+.balance {
+  font-size: 2.8rem;
+}
+
+.green {
+  color: var(--green);
+}
+
+.red {
+  color: var(--red);
 }
