--- a/src/pages/Home/components/Event/Event.css
+++ b/src/pages/Home/components/Event/Event.css
@@ -16,18 +16,19 @@
 .event_info_userPics {
   display: flex;
   width: 10px;
-  border-radius: 10px;
   margin-left: 15px;
+  margin-top: 4px;
 }
 
 .event_info_userPic {
   width: 30px;
   padding: 2px;
-  background-color: var(--background);
+  background-color: var(--sky_blue);
   border-radius: 50%;
-  margin-left: -15px;
+  margin-left: -1rem;
 }
 
 .event_img {
-  width: 150px;
+  width: 140px;
+  border-radius: 1rem;
 }
