--- a/src/globalComponents/Header/Header.css
+++ b/src/globalComponents/Header/Header.css
@@ -1,6 +1,6 @@
 .header {
   width: 100vw;
-  height: 100px;
+  height: 10vh;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
