--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -3,7 +3,7 @@
   flex-direction: row;
   justify-content: space-evenly;
   width: 100vw;
-  height: 79.5vh;
+  min-height: 90vh;
   flex-wrap: wrap;
 }
 
@@ -17,13 +17,12 @@
   margin-top: 30px;
   width: 25%;
   min-width: 350px;
-  height: 80%;
   display: flex;
   flex-direction: column;
 }
 
 .home-container_events {
-  height: 100%;
+  height: 80%;
   background-color: var(--sky_blue);
   display: flex;
   flex-direction: column;
@@ -42,6 +41,9 @@
 } */
 
 .home-container_saldo {
+  height: auto;
+  justify-content: center;
+  padding: 1.5rem 0;
 }
 
 .home-container_info {
@@ -55,7 +57,8 @@
 }
 
 .balance {
-  font-size: 2.8rem;
+  font-size: 3rem;
+  font-weight: 500;
 }
 
 .green {
