--- a/src/pages/Home/components/Event/Event.css
+++ b/src/pages/Home/components/Event/Event.css
@@ -16,14 +16,16 @@
 .event_info_userPics {
   display: flex;
   width: 10px;
-  margin-left: 15px;
+  margin-left: 1rem;
   margin-top: 4px;
 }
 
 .event_info_userPic {
   width: 30px;
   padding: 2px;
-  background-color: var(--sky_blue);
+  /* background-color: var(--sky_blue); */
+  background-color: black;
+  border: 2px solid var(--sky_blue);
   border-radius: 50%;
   margin-left: -1rem;
 }
