configurar ruta /event/:url y empezar a maquetarla

--- a/src/pages/Home/components/Event/Event.css
+++ b/src/pages/Home/components/Event/Event.css
@@ -13,6 +13,11 @@
   justify-content: center;
 }
 
+.event_info_name {
+  cursor: pointer;
+  color: var(--ocean_blue);
+}
+
 .event_info_userPics {
   display: flex;
   width: 10px;
