--- a/src/pages/EventDetail/EventDetail.css
+++ b/src/pages/EventDetail/EventDetail.css
@@ -3,7 +3,19 @@
 }
 
 .home-container_aside {
-  width: 10%;
+  width: 6%;
   background-color: var(--sky_blue);
-  min-height: 80vh;
+  min-height: 60vh;
+  position: fixed;
+  top: 25vh;
+  left: 0;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.home-container_aside_icon {
+  width: 40px;
 }
