añadir expenses e imagen del evento en EventDetail

--- a/src/pages/EventDetail/EventDetail.css
+++ b/src/pages/EventDetail/EventDetail.css
@@ -2,6 +2,10 @@
   width: 20%;
 }
 
+.home-container_section--detail_event-img {
+  margin-top: 20px;
+}
+
 .home-container_aside {
   width: 100px;
   background-color: var(--sky_blue);
