--- a/src/pages/EventDetail/EventDetail.css
+++ b/src/pages/EventDetail/EventDetail.css
@@ -3,7 +3,8 @@
 }
 
 .home-container_section--detail_event-img {
-  margin-top: 20px;
+  margin: 32px 0;
+  border-radius: 1rem;
 }
 
 .home-container_aside {
