--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -48,12 +48,12 @@
 
 .home-container_info {
   margin: 20px 0;
-  width: 90%;
+  width: 85%;
   display: flex;
   flex-direction: column;
   align-items: center;
   gap: 20px;
-  overflow-y: scroll;
+  overflow-y: auto;
 }
 
 .router-link {
