--- a/src/pages/EventDetail/components/Expense/Expense.css
+++ b/src/pages/EventDetail/components/Expense/Expense.css
@@ -24,8 +24,9 @@
 }
 
 .expense_amount {
-  font-size: 2rem;
+  font-size: 1.1rem;
   font-weight: 500;
+  text-align: center;
 }
 
 .expense_amount--green {
