--- a/src/pages/Invitation/Invitation.css
+++ b/src/pages/Invitation/Invitation.css
@@ -6,11 +6,34 @@
   width: 85%;
 }
 
-.invitation__plusButton {
+.invitation__button {
   width: 15%;
   border-radius: 10px;
-  background-color: var(--ocean_blue);
   color: white;
   font-size: 1.2rem;
   cursor: pointer;
+}
+
+.invitation__plusButton {
+  background-color: var(--ocean_blue);
+}
+
+.invitation__crossButton {
+  background-color: var(--red);
+}
+
+.event_form--invitation {
+  justify-content: unset;
+  height: 100%;
+}
+
+.form-container--invitation {
+  justify-content: space-between;
+  margin-top: 20px;
+}
+
+.form-container__container-invitation {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
 }
