--- a/src/pages/NewEvent/NewEvent.css
+++ b/src/pages/NewEvent/NewEvent.css
@@ -151,12 +151,17 @@
 }
 
 .add_image {
-  align-self: flex-start;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .newevent__buttonFile {
   margin-bottom: 10px;
   margin-top: 5px;
+  width: 60%;
+  padding: 10px 0;
+  align-self: center;
 }
 
 .newevent__members {
