HU 5 acabada, comprobar HU 4 y HU 6 empezada

--- a/src/pages/NewEvent/NewEvent.css
+++ b/src/pages/NewEvent/NewEvent.css
@@ -172,6 +172,10 @@
   height: 250px;
 }
 
+.newevent__members--newEvent {
+  height: 120px;
+}
+
 .newevent__form_textarea {
   resize: none;
   outline: none;
