--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.buttonActionIco{
+.buttonActionIco {
   width: 40px;
   height: 40px;
 
@@ -7,7 +7,29 @@
 }
 
 
-.buttonActionIco img{
+.buttonActionIco img {
   width: 30px;
   height: 30px;
+}
+
+
+
+
+.button {
+  background-color: #fafafa;
+  color: #333;
+  border: 1px solid rgba(0, 0, 0, 0.209);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.12);
+  border-radius: 5px;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  transition: background-color .2s ease, color .2s ease;
+}
+
+.button:hover {
+  background-color: #aaa;
+  color: white;
 }
