--- a/src/pages/Verification/Verification.css
+++ b/src/pages/Verification/Verification.css
@@ -2,4 +2,10 @@
   text-align: center;
   margin: 20px 0;
   text-wrap: pretty;
+  padding: 0 35px;
+}
+
+.pt-40 {
+  padding-top: 20px;
+  margin-bottom: -20px;
 }
