--- a/src/pages/EventDetail/EventDetail.css
+++ b/src/pages/EventDetail/EventDetail.css
@@ -1,3 +1,51 @@
+.EventDetail {
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  height: 100dvh;
+  overflow: hidden;
+}
+
+.EventDetail__header {
+  width: 100%;
+  height: 300px;
+  background-size: cover !important;
+  background-position: center !important;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: var(--white);
+
+  position: relative;
+}
+
+.EventDetail__header .back {
+  position: absolute;
+  top: 10px;
+  left: 10px;
+}
+
+.EventDetail__header .back img {
+  width: 40px;
+  height: 40px;
+}
+
+
+.EventDetail__content {
+  flex: 1;
+  overflow: auto;
+
+
+}
+
+.EventDetail__content> :not(header) {
+
+  width: 100%;
+  max-width: 1200px;
+  margin: 20px auto;
+}
+
 .home-container_section--detail {
   width: 20%;
 }
@@ -8,15 +56,11 @@
 }
 
 .home-container_aside {
-  width: 100px;
-  background-color: var(--sky_blue);
-  min-height: 60vh;
-  position: fixed;
-  top: 25vh;
-  left: 0;
-  border-radius: 10px;
+  width: 100%;
+  height: 80px;
+
+  background-color: var(--background-card);
   display: flex;
-  flex-direction: column;
   justify-content: space-evenly;
   align-items: center;
 }
@@ -24,4 +68,13 @@
 .home-container_aside_icon {
   width: 40px;
   cursor: pointer;
+
+}
+
+
+
+
+
+@media (width < 600px) {
+  .EventDetail__content> :not(header) {}
 }
