--- a/src/pages/Home/components/Event/Event.css
+++ b/src/pages/Home/components/Event/Event.css
@@ -1,19 +1,33 @@
-.router-link {
+.EventCard {
   width: 100%;
+
 }
 
 .event {
+  color: var(--text-color);
+
+  height: 100px;
+  overflow: hidden;
+
+  padding: .7rem;
+
   width: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
+  background-color: var(--background);
+
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+  border-radius: var(--border-radius);
+  cursor: pointer;
+  transition: transform .2s;
+  /* Animation */
+
 }
 
 .event:hover {
-  cursor: pointer;
-  background-color: #caedff;
-  border-radius: 10px;
+  transform: scale(1.04);
 }
 
 .event_info {
@@ -46,7 +60,14 @@
   margin-left: -1rem;
 }
 
-.event_img {
+.EventCard .backgroundImage {
   width: 140px;
+  height: 100%;
+
+  background-size: cover !important;
+  background-position: center !important;
+
   border-radius: 1rem;
+
+  background-color: var(--background-noImage);
 }
