--- a/src/styles/variables.css
+++ b/src/styles/variables.css
@@ -13,7 +13,7 @@
   --ocean_blue: #01579b;
   --green: #34a853;
   --light_grey: #9a9a9a;
-  --red: #e11212;
+  --red: #a00;
 
 
   /* MEASUREMENTS */
