--- a/src/pages/EventDetail/EventDetail.css
+++ b/src/pages/EventDetail/EventDetail.css
@@ -2,7 +2,6 @@
   padding: 0;
   display: flex;
   flex-direction: column;
-  height: 100dvh;
   overflow: hidden;
 }
 
@@ -30,6 +29,35 @@
   width: 40px;
   height: 40px;
 }
+
+.EventDetail__navPages {
+  margin: 0 !important;
+}
+
+.EventDetail__navPages ul {
+  list-style: none;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
+.EventDetail__navPages ul li {
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  cursor: pointer;
+  background-color: var(--sky_blue);
+}
+
+.EventDetail__navPages ul li:hover {
+  filter: brightness(.9);
+  /* background-color: var(--light_blue) ; */
+}
+
+.EventDetail__navPages ul li.active {
+  background-color: var(--ocean_blue);
+  color: white;
+}
+
 
 
 .EventDetail__content {
