--- a/src/pages/Login/Login.css
+++ b/src/pages/Login/Login.css
@@ -118,11 +118,14 @@
 }
 
 .login_mensajeRegistro {
-  margin-top: 1.2rem;
-  margin-bottom: 2rem;
+  margin-top: 1.6rem;
   color: black;
   width: 70%;
   text-align: center;
+}
+
+.mt-07rem {
+  margin-top: 0.7rem;
 }
 
 .subrayado {
@@ -137,6 +140,7 @@
   align-items: center;
   gap: 0.9rem;
   width: 100%;
+  margin-top: 2rem;
 }
 
 .login_buttons_logo {
