--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,7 @@
 
   display: grid;
   grid-template-columns: 1fr;
-  grid-template-rows: 60px 1fr;
+  grid-template-rows: 1fr;
 
   grid-template-areas: "header" "main";
 }
