--- a/src/pages/EventDetail/components/Debts/Debts.css
+++ b/src/pages/EventDetail/components/Debts/Debts.css
@@ -1,4 +1,4 @@
-.expense {
+.debts {
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -6,39 +6,35 @@
   justify-content: space-between;
 }
 
-.expense:hover {
-  cursor: pointer;
-  background-color: #caedff;
-  border-radius: 10px;
-}
 
-.expense_img-concept {
+
+.debts_img-concept {
   display: flex;
   gap: 20px;
   align-items: center;
 }
 
-.expense_img-concept > p {
+.debts_img-concept > p {
   cursor: pointer;
   font-size: 1.1rem;
 }
 
-.expense_img-concept > img {
+.debts_img-concept > img {
   width: 55px;
   height: 55px;
   border-radius: 50%;
 }
 
-.expense_amount {
+.debts_amount {
   font-size: 1.1rem;
   font-weight: 500;
   text-align: center;
 }
 
-.expense_amount--green {
+.debts_amount--green {
   color: var(--green);
 }
 
-.expense_amount--red {
+.debts_amount--red {
   color: var(--red);
 }
