--- a/src/globalComponents/Header/Header.css
+++ b/src/globalComponents/Header/Header.css
@@ -43,7 +43,7 @@
   right: 0;
 
   background-color: var(--background);
-  width: 100px;
+  width: 120px;
   padding: .5rem;
 
   box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
@@ -77,6 +77,7 @@
   align-items: center;
   text-decoration: none;
   color: var(--text-color);
+  margin: 5px;
 }
 
 .header__userMenu ul li a img {
