--- a/src/pages/EventDetail/EventDetail.css
+++ b/src/pages/EventDetail/EventDetail.css
@@ -114,6 +114,12 @@
   margin: 0 auto;
 }
 
+.home-container_info {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
 .home-container_section--detail {
   width: 20%;
 }
