--- a/src/pages/EventDetail/components/Users/User.css
+++ b/src/pages/EventDetail/components/Users/User.css
@@ -3,14 +3,35 @@
   align-items: center;
   width: 100%;
   gap: 20px;
+
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+
+  border-radius: 10px;
+  padding: 10px;
 }
 
 .user:hover {
   cursor: default;
 }
 
-.user > img {
+.user>img {
   width: 55px;
   height: 55px;
   border-radius: 50%;
+}
+
+
+.user .spacer {
+  flex: 1;
+}
+
+.user .fireBtn svg {
+  width: 30px;
+  height: 30px;
+  box-sizing: border-box;
+}
+
+.user .fireBtn {
+  background: none;
+  padding: 10px;
 }
