--- a/src/pages/NewExpense/NewExpense.css
+++ b/src/pages/NewExpense/NewExpense.css
@@ -220,10 +220,11 @@
   color: white
 }
 
-.NewExpense__modal__content__header {
-  border-bottom: 1px solid black;
-  margin-bottom: 10px;
+.NewExpense__modal__content {
+  width: 100%;
 }
+
+
 
 .NewExpense__modal__content input[type=number] {
   border-bottom: 1px solid black;
@@ -231,4 +232,42 @@
 
 .NewExpense__modal__content .error {
   color: #a00;
+}
+
+
+
+.User__distribution__list {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.NewExpense__modal__content__header,
+.User__distribution__element {
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+
+  display: flex;
+  width: 100%;
+  padding: 10px;
+  border-radius: var(--border-radius);
+  gap: 10px;
+
+  cursor: pointer;
+}
+
+.NewExpense__modal__content__header>label,
+.User__distribution__element>label {
+  flex: 1;
+  cursor: pointer;
+}
+
+.NewExpense__modal__content__header {
+  box-shadow: none;
+}
+
+
+.User__distribution__element input[type=number] {
+  width: 5ch;
+  text-align: right;
 }
