--- a/src/pages/EventDetail/EventDetail.css
+++ b/src/pages/EventDetail/EventDetail.css
@@ -145,8 +145,24 @@
 
 }
 
+.expense-transactions_info_transactions,
+.home-container_events {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
 
-
+.home-container_events .expense {
+  display: flex;
+  align-items: center;
+  width: 100%;
+  gap: 20px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+  border-radius: 10px;
+  padding: 17px;
+}
 
 
 
