--- a/src/pages/EventDetail/components/Expense/Expense.css
+++ b/src/pages/EventDetail/components/Expense/Expense.css
@@ -1,11 +1,9 @@
 .expense {
-  padding-top: 0; /* Eliminamos el padding superior */
-  padding-bottom: 0; /* Eliminamos el padding inferior */
-  /* El resto de tu CSS aquí */
-  height: 100px;
+  padding-top: 0;
+  padding-bottom: 0;
   overflow: hidden;
-  padding-left: 1.1rem; /* Mantenemos el padding izquierdo */
-  padding-right: 1.1rem; /* Mantenemos el padding derecho */
+  padding-left: 1.1rem;
+  padding-right: 1.1rem;
   width: 100%;
   display: flex;
   gap: 1rem;
@@ -17,7 +15,6 @@
   border-radius: var(--border-radius);
   cursor: pointer;
   transition: transform .2s;
-  margin: 1.1rem;
   height: 3rem;
 }
 
@@ -33,12 +30,12 @@
   align-items: center;
 }
 
-.expense_img-concept > p {
+.expense_img-concept>p {
   cursor: pointer;
   font-size: 1.1rem;
 }
 
-.expense_img-concept > img {
+.expense_img-concept>img {
   width: 55px;
   height: 55px;
   border-radius: 50%;
