--- a/src/pages/EventDetail/components/ExpenseTransactions/ExpenseTransactions.css
+++ b/src/pages/EventDetail/components/ExpenseTransactions/ExpenseTransactions.css
@@ -1,5 +1,6 @@
 .expense-transactions {
-  height: 80%;
+  margin-top: 1rem;
+  height: 95%;
   width: 100%;
   background-color: var(--sky_blue);
   display: flex;
@@ -7,6 +8,10 @@
   align-items: center;
   border-radius: 1rem;
   padding-bottom: 1rem;
+
+  position: relative;
+
+  overflow: hidden;
 }
 
 .expense-transactions_info {
@@ -14,15 +19,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 50px;
+  gap: 20px;
   margin: 20px 0;
+
+  height: 100%;
 }
 
-.expense-transactions_info > img {
-  margin-bottom: -50px;
+.expense-transactions_info__back {
+  position: absolute;
   width: 30px;
-  align-self: flex-start;
   cursor: pointer;
+
+  top: 10px;
+  left: 10px;
 }
 
 .expense-transactions_info_header {
@@ -32,11 +41,11 @@
   gap: 20px;
 }
 
-.expense-transactions_info_header > p {
+.expense-transactions_info_header>p {
   font-size: 1.25rem;
 }
 
-.expense-transactions_info_header_title > h3 {
+.expense-transactions_info_header_title>h3 {
   font-size: 1.5rem;
 }
 
@@ -46,19 +55,37 @@
   justify-content: space-evenly;
 }
 
-.expense-transactions_info_header_title > img {
+.expense-transactions_info_header_title>img {
   width: 55px;
   height: 55px;
   border-radius: 50%;
 }
 
 .expense-transactions_info_transactions {
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 10px;
-  overflow-y: auto;
+  overflow-y: scroll;
+
+  flex: 1;
 }
 
+
+
 .expense-transactions_info_transactions_transaction {
-  font-size: 1.1rem;
+  width: 100%;
+  background-color: white;
+  display: flex;
+  align-items: center;
+  width: 100%;
+  gap: 20px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+  border-radius: 10px;
+  padding: 17px;
+}
+
+.expense-transactions_info_transactions_transaction>*:nth-child(3) {
+  flex: 1;
+  text-align: right;
 }
