--- a/src/pages/EventDetail/components/Users/User.css
+++ b/src/pages/EventDetail/components/Users/User.css
@@ -4,22 +4,26 @@
   width: 100%;
   gap: 20px;
 
-  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px, rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 1px 3px 0px,
+    rgba(0, 0, 0, 0.06) 0px 1px 2px 0px;
 
   border-radius: 10px;
   padding: 10px;
+}
+
+.pointer {
+  cursor: pointer !important;
 }
 
 .user:hover {
   cursor: default;
 }
 
-.user>img {
+.user > img {
   width: 55px;
   height: 55px;
   border-radius: 50%;
 }
-
 
 .user .spacer {
   flex: 1;
