--- a/src/pages/NewExpense/NewExpense.css
+++ b/src/pages/NewExpense/NewExpense.css
@@ -154,8 +154,8 @@
   gap: 5px;
 }
 
-.add_amount > input,
-.add_name > input {
+.add_amount>input,
+.add_name>input {
   width: 100%;
 }
 
@@ -196,6 +196,10 @@
   box-shadow: 1px 2px 6px 0px rgba(105, 105, 105, 0.79);
 }
 
+.w-100 {
+  width: 100%;
+}
+
 /* NEW EXPENSE MODAL */
 .who_paid .textModal__content {
   width: 450px;
@@ -221,7 +225,7 @@
   width: 100%;
 }
 
-.NewExpense__modal__content input[type="number"] {
+.NewExpense__modal__content input[type='number'] {
   border-bottom: 1px solid black;
 }
 
@@ -250,8 +254,8 @@
   cursor: pointer;
 }
 
-.NewExpense__modal__content__header > label,
-.User__distribution__element > label {
+.NewExpense__modal__content__header>label,
+.User__distribution__element>label {
   flex: 1;
   cursor: pointer;
 }
@@ -260,7 +264,22 @@
   box-shadow: none;
 }
 
-.User__distribution__element input[type="number"] {
+.User__distribution__element input[type='number'] {
   width: 5ch;
   text-align: right;
+}
+
+
+
+.ExpenseDistribution__form {
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+
+}
+
+.ExpenseDistribution__form .newevent_form_btn.newevent_form_btn--login {
+  align-self: center;
 }
